Revert "deleted settings from git"
This reverts commit 4e2035b2c666bde47ff87ecf9060c2f65929ef6b.

--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,3 @@
-:root {
-    --max-width: 56%;
-}
-
-
 .rating {
     /* overflow: hidden; */
     transform: translate(-50%, -50%) rotateY(180deg) ;
@@ -26,7 +21,7 @@
     /* background: #ccc; */
 }
 
-.rating label::before {
+.rating label:before {
     content: '\f005';
     font-family: 'Font Awesome 5 free';
     /* font-weight: 900; */
@@ -38,7 +33,7 @@
     color: grey;
 }
 
-.rating label::after {
+.rating label:after {
     content: '\f005';
     font-family: 'Font Awesome 5 free';
     font-weight: 900;
@@ -60,456 +55,5 @@
     opacity: 1;
 }
 
-/*=========================================*/
 
-.stars-outer {
-    position: relative;
-    display: inline-block;
-}
 
-.stars-inner {
-    position: absolute;
-    top: 0;
-    /* left: 0; */
-    white-space: nowrap;
-    overflow: hidden;
-    /*color: yellow;*/
-   /* width: var(--max-width);*/
-}
-
-.stars-outer::before {
-    content: '\f005 \f005 \f005 \f005 \f005';
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 200;
-    color:grey;
-    font-size: 20px;
-}
-
-.stars-inner::before {
-    content: '\f005 \f005 \f005 \f005 \f005';
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    color: yellow;
-    font-size: 20px;
-}
-
-/* ==========================VideoPlayer=========================== */
-:root {
-  --primary-color: grey;
-  --font-color: white;
-}
-.fas {
-  /* color: var(--font-color); */
-  font-size: 25px;
-  color: white;
-}
-
-
-/* .player {
-  max-width: 80vw;
-  min-width: 800px;
-  border: 5px solid black;
-  border-radius: 10px;
-  background: black;
-  position: relative;
-  cursor: pointer;
-} */
-
-video_1 {
-  border-radius: 5px;
-}
-
-/* Containers */
-.show-controls:hover .controls-container {
-    opacity: 1;
-    transition: all 0.1s ease-out;
-}
-.show-controls {
-  width: 100%;
-  height: 5%;
-  /* background: dodgerblue; */
-  border-color: rgb(253, 252, 252);
-  z-index: 2;
-  position: absolute;
-  bottom: 0;
-  cursor: default;
-}
-
-.controls-container {
-  position: bottomp;
-  bottom: -5px;
-  width: 100%;
-  height: 90px;
-  margin-top: -95px;
-  background: rgba(0, 0, 0, 0.5);
-  box-sizing: border-box;
-  z-index: 5;
-  display: flex;
-  justify-content: space-between;
-  opacity: 0;
-  transition: all 0.5s ease-out 0.5s;
- 
-}
-/* Progress Bar */
-.progress-range {
-  height: 8px;
-  width: 95%;
-  /* width: calc (100% - 100px); */
-  /* background:rgba(255, 255, 255, 0.5) */
-  background: grey;
-  /* margin: auto; */
-  border-radius: 10px;
-  position: absolute;
-  top: 5px;
-  left: 15px;
-  cursor: pointer;
-  transition: height 0.1s ease-in-out;
-}
-
-.progress-range:hover{
-  height: 12px;
-}
-
-.progress-bar {
-  /* background: var(--primary-color); */
-  background: white;
-  width: 50%;
-  height: 100%;
-  border-radius: 10px;
-  /* transition: all 0.5s ease; */
-  cursor: pointer;
-}
-
-
-.control-group {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.controls-left,
-.controls-right {
-  flex: 1;
-  display: flex;
-  overflow: hidden;
-  position: relative;
-  top: 40px;
-}
-
-
-
-/* Left Controls -------------------------- */
-.controls-left {
-  justify-content: flex-start;
-  margin-left: 15px;
-}
-
-/* Play & Pause */
-.play-controls {
-  margin-right: 15px;
-}
-
-.fa-play:hover,
-.fa-pause:hover {
-  color: var(--primary-color);
-  cursor: pointer;
-}
-
-/* Volume */
-.volume-icon {
-  cursor: pointer;
-}
-
-.volume-range {
-  height: 8px;
-  width: 100px;
-  background: rgba(209, 209, 209, 0.5);
-  border-radius: 10px;
-  position: relative;
-  top: -21px;
-  left: 50px;
-  cursor: pointer;
-}
-
-.volume-bar {
-  /* background: var(--font-color); */
-  background: white;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  transition: width 0.2s ease-in;
-}
-
-.volume-bar:hover {
-  background: var(--primary-color);
-}
-
-/* Right Controls ---------------------------- */
-.controls-right {
-  justify-content: flex-end;
-  margin-right: 15px;
-}
-
-.speed{
-  position: relative;
-  top: 10px;
-}
-
-.time {
-  position: relative;
-  top: 10px;
-  color: white;
-}
-
-/* Playback Speed */
-.speed {
-  margin-right: 15px;
-}
-
-select {
-  /* background: transparent; */
-  /* color: var(--font-color); */
-  color: black;
-  border: none;
-  font-size: 18px;
-  position: relative;
-  top: -2.5px;
-  border-radius: 5px;
-}
-
-select > option {
-  /* background: (0, 0, 0, 0.9); */
-  background: rgb(255, 254, 254);
-  border: none;
-  font-size: 14px;
-}
-
-/* Elapsed Time & Duration */
-.time {
-  margin-right: 15px;
-  color: var(--font-color);
-  /* color: white; */
-  font-weight: bold;
-  user-select: none;
-}
-
-/* Fullscreen */
-.fullscreen {
-  cursor: pointer;
-}
-
-.video-fullscreen {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-/* Subtitle */
-/*::cue {
-  font-size: 20px;
-  font-family: Georgia, serif;
-  color: blue;
-  background-position: right;
-  opacity: 1;
-
-}*/
-
-/* Media Query: Large Smartphone (Vertical) */
-@media screen and (max-width: 600px) {
-
-  .fas {
-    font-size: 20px;
-  }
-
-  .controls-container {
-    height: 50px;
-  }
-
-  .control-group {
-    position: relative;
-    top: -25px;
-  }
-
-  /* Progress Bar */
-  .progress-range {
-    width: 100%;
-    top: 0;
-    left: 0;
-    border-radius: 0;
-  }
-
-  .progress-bar {
-    border-radius: 0;
-  }
-  /* Volume Bar */
-  .volume-range {
-    width: 50px;
-    left: 30px;
-    top: -15px;
-  }
-
-  .speed,
-  .time {
-    top: 3px;
-  }
-
-  select {
-    font-size: 12px;
-  }
-
-  .time {
-    font-size: 12px;
-  }
-}
-
-/* Media Query: Large Smartphone (Horizontal) */
-/* @media screen and (max-width: 900px) and (max-height: 500px) {
-  .player {
-    max-height: 95vh;
-    max-width: auto;
-  }
-
-  video {
-    height: 95vh;
-    object-fit: cover;
-  }
-
-  .video-fullscreen {
-    height: 97.5vh;
-    border-radius: 0;
-  }
-} */
-
-
-/* .video-js {
-  width: 50%; 
-  height: 50%
-} */
-
-
-/* html, body {
-  height: 100%;
-  overflow: hidden;
-  margin: 0;
-}
-#content {
-  height: 100%;
-} */
-
-/* 
-#left {
-  float: left;
-  width: 70%;
-  /* background: red; */
-  /* height: 100%;
-  overflow: auto;
-  box-sizing: border-box;
-  padding: 0.5em;
-} */
-
-.my {
-  max-width: 80vw;
-  min-width: 800px;
-  border: 5px solid black;
-  border-radius: 10px;
-  background: blue;
-  /* position: relative; */
-  cursor: pointer;
-}
-
-
- #video {
-  max-width: 80vw;
-  min-width: 800px;
-  border: 5px solid black;
-  border-radius: 10px;
-  /* background: black; */ */
-  /* position: relative; */
-  /* cursor: pointer; */
-
-}
-
-#scroll_col {
-  /* float: left; */
-  width: 100%;
-  /* background-color: blue; */
-  height: 600px;
-  overflow: auto;
-  /* overflow: scroll; */
-  /* overflow: hidden; */
-  /* box-sizing: border-box; */
-}
-
-.section_1 {
-  background-color:rgb(245, 244, 244);
-  padding: 10px;
-  border-style: solid;
-  border-width: 0.1rem;
-  border-color: grey;
-} 
-
-.section_1:hover{
-  background-color: lightgrey;
-  font-size: 1.1rem;
-  
-}
-
-#a_id_section {
-  display: block;
-  color: black;
-}
-
-#a_id_section:hover {
-  text-decoration: none;
-  /* text-decoration: underline; */
-  /* text-decoration: line-through; */
-  color: black;
-  font-weight: 900;
-  
-}
-
-
-#lecture:hover {
-  background-color: lightgrey;
-
-}
-
-#a_id {
-  display: block;
-  color: blue;
-  font-style: italic;
-  
-}
-
-#a_id:hover {
-  text-decoration: none;
-  color: blue;
-  /* font-size: 1.1rem; */
-  font-weight: bold;
- 
-}
-/* #img_fit{ */
-  /* height: 10rem; */
-  /* object-fit: cover; */
-  /* object-fit: none; */
-  /* object-fit: scale-down; */
-  /* object-fit: contain; */
-  /* object-fit: fill; */
-/* } */
-
-.img_scale:hover{
-  /* opacity: 2; */
-  transform: scale(1.1);
-
-}
-
-.nav-link{
-  padding:0%;
-}
-
-#box {
-  padding: 2rem;
-  border-style: dashed;
-  border-color: grey;
-}
