--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -6,17 +6,22 @@
 
 <div class="container">
   <div class="row m-auto">   
-    <div class="col-2">
+    <div class="col-1">
         <a class='nav-link' href="{% url 'contacts' %}">
         <div class="text-dark text-center"><b>Контакты</b></div>
         </a>
     </div>
-       <div class="col-2">
+      <div class="col-2">
+        <a class='nav-link' href="{% url 'personal_data' %}">
+          <div class="text-dark text-center "><b>Политика обработки персональных данных</b></div>
+        </a>
+      </div>
+       <div class="col-1">
         <a class='nav-link' href="{% url 'help' %}">
           <div class="text-dark text-center"><b>Помощь</b></div>
           </a>
         </div>
-          <div class="col-2">
+          <div class="col-1">
         <a class='nav-link' href="{% url 'termsofuse' %}">
           <div class="text-dark text-center"><b>Условия использования</b></div>
           </a>
