--- a/templates/contacts/termsofuse.html
+++ b/templates/contacts/termsofuse.html
@@ -3,101 +3,68 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h3 class='text-center m-2'>TERMS OF USE</h3>
+            <h3 class='text-center m-2'>УСЛОВИЯ ИСПОЛЬЗОВАНИЯ СЕРВИСА</h3>
 
-            <h5>1. General Policies</h5>
+            <h5>1. Общие положения</h5>
             <p>
-                Ruversity.com is a portal where individuals & entities, hereinafter to be referred to as the
-                'Instructors or Instructor'
-                post educational courses, tests, exams, hereinafter to be referred to as the ‘educational content’ in
-                order that other
-                individuals and entities hereinafter to be referred to as the ‘Students or Student’ could use the above
-                ‘educational
-                content’ for learning, career & personal growth and certification.
-            <p> The above educational content is provided on a
-                commercial basis or for free depending on conditions determined by Instructors.
+                Ruversity.com представляет собой ресурс, где физические и юридические лица, здесь и далее именуемые как Преподаватель или Преподаватели, размещают обучающие видео материалы, лекции, тесты, здесь и далее именуемые как Обучающие материалы.
+                Дргие физические и юридические лица, здесь и далее именуемые как Слушатель или Слушатели, могут использовать размещенные на данном ресурсе Обучающие материалы с целью обучения, повышения квалификации, личностного роста и сертификации.
+              
+            <p> Обучающие материалы представляются на коммерческой основе или бесплатно в зависимости от условий, определённых Преподавателем.
+            </p>
+            <p>Ruversity.com предоставляет Слушателям пожизненный доступ к приобретенным Обучающим материалам при условии, что Слушатель не нарушает внутрение правила ruversity.com и законодательство РФ.
+            </p>
+            <p>Для пользования сервисом Слушатели и Преподаватели заводят личные учетные записи. Учетная запись пользователя може одновременно использоваться пользователем как для роли Слушателя, так и для роли Преподавателя. 
+            </p>
+            <p>Пользовтели несут полную ответственность за свою учетную запись. Пользователи обязуются не передавать свои учетные данне третьим лицам и принимать все возможные необходимые меры для защиты своей учетной записи.
             </p>
             <p>
-                Instructors & Students hereinafter are referred to as the “Users or User”.
-                Ruversity.com, hereinafter referred to as the ‘Portal’ grants the Student lifetime access to educational
-                content purchased by the Student.by the Student provided the Student does not violate internal
-                regulations of Ruversity.com & local laws & regulations.
+                Пользователи несут полную ответственность за любой вред, причинённый ruversity.com или третьим лицам в связи с неправомочным использованием их учетных записей.
+            </p>
+              Пользователи обязуются не размещать Обучающие материалы, посты, вопросы, ответы или картинки, нарушающие законодательство РФ или оскорбляющие достоинство других пользователей. 
             </p>
             <p>
-                Students & Instructors are to have personal accounts to post educational content as Instructors or to
-                have lifetime access to educational content as Students. Users bear complete responsibility for their
-                accounts, including any adverse effects to Ruversity.com or to any third party which may potentially
-                occur due to illegal usage of a user personal account. Users are responsible for safely keeping their
-                credentials.
-                Users commit not to post any educational content, reviews, questions, answers or images which may
-                somehow offend other Users.
+                Пользователи несут полную ответственность за любой вред, причинённый ruversity.com или третьим лицам в связи с нарушением условий, описанных в предыдущем параграфе.
+            </p>
+        
+            <h5>2. Преподаватели</h5>
+            <p>
+                Преподаватели передают ruversity.com право предоставлять Слушателям пожизненный доступ к Обучающим материалам, созданным данным Преподавателем и приобретенным данным Слушателем, на условиях, описанных в параграфе 5 данного документа.
+        
+            <p>Преподаватель может размещать Обучающие материалы только при условии, что он является правообладателем данных Обучающих материалов, или право размещать данные Обучающие материалы было передано ему правообладателем данных обучающих материалов или лицом, уполномоченным сделать это в соответствии с законодательством РФ.
+            </p>
+            <p>Преподаватель может использовать зарегистрированные торговые знаки только при условии что он является правообладателем данного торгового знака, или право использовать данный торговый знак было передано ему правообладателем данного торгового знака или лицом, уполномоченным сделать это в соответствии с законодательством РФ.
             </p>
             <p>
-                Users commit not to post any educational content, reviews, questions, answers or images breaking laws &
-                regulations of the User’s country of residence or country of residence of Ruversity.com.
+                Не является нарушением допустимое добросовестное использование торговго знака в случае, если он используется для обозначения предмета Обучающих материалов.
             </p>
-            <h5>2. Instructors</h5>
-            <p>
-                Instructors license the Portal to provide Students with lifetime access to educational content posted by
-                the Instructor at conditions described in paragraph 5 of the present document.
+               
+            <p>Преподаватель может удалить свою учетную запись в любое время. Однако, Обучающие материалы, созданные им, останутся доступными Слуашателям, которые приобрели данные Обучающие материалы ранее.
             </p>
-            <p>
-                Instructors commit not to post educational content which violates laws & regulations of the Instructor’s
-                country of residence or country of residence of Ruversity.com.
-                Instructors bear full responsibility for knowing such laws, regulations & negative consequences which
-                may occur in case of violation.
+            <h5>3. Слушатели</h5>
+            <p>Ruversity.com предоставляет Слушателям пожизненный доступ к Обучающим материалам на условиях, определяемых совместно Преподавателем, разместившим данный Обучающий материал, и администрацие ruversity.com/
             </p>
             <p>
-                The Instructor is authorized to post educational content only in case he is the owner of the educational
-                content or the right to post the educational content was granted to him by the owner of the educational
-                content or other person authorized to do so in compliance with laws & regulations of the Instructor’s
-                country of residence.
+                Слушатель может просматривать Обучающий материал, но не может скачать его на свои компьютер.
+            </p>
+            <p>Слушатели используют Обучающие материалы на своий страх и риск. Ruversity.com не несет никакой ответственности за негативные последствия, которые могут наступить в результате использования данных Обучающих материалов.
+            <p>Слушатели обязуются не копировать, не продавать, не транслировать, не сдавать в аренду, не передавать на безвозмездной основе и не передавать каким-либо другим способом свое право просмотра приобретенных ими Обучающих материалов за исключением случаев, когда у них есть письменное разрешение от Ruversity.com на выполнение данных действий.
+
+            </p>
+            <h5>4. Споры</h5>
+            <p>
+                Если физическое или юридическое лицо подает жалобу, что Преподаватель, разместивший какой-либо Обующий материал, не имеет на это права, то такое лицо должно самостоятельно предоставить необходимые и достаточные доказательства, подтверждающие данный факт. 
+                
+            </p>
+            <p>Если физическое или юридическое лицо подает жалобу, что Преподаватель, незаконно использует торговый знак, то такое лицо должно самостоятельно предоставить необходимые и достаточные доказательства,
+            подтверждающие данный факт.
+            </p>
+            <p>Если физическое или юридическое лицо подает жалобу, что Слушатель при использовании Обучающих материалов нарушает законодательство РФ, то такое лицо
+            должно самостоятельно предоставить необходимые и достаточные доказательства,
+            подтверждающие данный факт.
             </p>
             <p>
-                The Instructor is authorized to use registered trademarks only in case he is the owner of the trademark
-                or the right to use the trademark was granted to him by the owner of the trademark or other person
-                authorized to do so in compliance with laws & regulations of the Instructor’s country of residence.
-                The above paragraph does not prohibit nominative fair use of registered trademarks in case they are used
-                to indicate the subject of the educational content.
-            </p>
-            <p>
-                The Instructor may terminate his or her account at any time. However, the educational content posted by
-                the Instructor remains available for the Students who have purchased such educational content earlier.
-            </p>
-            <h5>3. Students</h5>
-            <p>
-                Ruversity.com provides Students with lifetime access to educational content at conditions determined
-                together by Instructors & the Portal.
-            </p>
-            <p>
-                Students use the educational content at their own peril & risk. Ruversity.com in no case bears any
-                responsibility for any negative consequences which may occur as a result of using the above educational
-                content.
-            </p>
-            <p>
-                Students commit not to copy, sell, stream, broadcast, rent, share or in any other way transfer their
-                right to watch & use the educational content to any third party provided they do not have a written
-                authorization to do so issued by Ruversity.com.
-            </p>
-            <h5>4. Disputes</h5>
-            <p>
-                If a person or entity files a complaint stating that the Instructor who has posted some educational
-                content is not authorized to do so, it is the duty of this person to provide necessary & sufficient
-                evidence of the questionable fact.
-            </p>
-            <p>
-                If a person or entity files a complaint stating that the Instructor illegally uses a registered
-                trademark in his educational content, it is the duty of this person to provide necessary & sufficient
-                evidence of the questionable fact.
-            </p>
-            <p>
-                If a person or entity files a complaint stating that the Student uses the educational content against
-                inner regulations of the portal or against local laws & regulations, it is the duty of this person to
-                provide necessary & sufficient evidence of the questionable fact.
-            </p>
-            <p>
-                In all the cases listed in paragraph 4 the portal reserves the right to withdraw the questionable
-                educational content from public access.
+                Во всех случаях, описанных в параграфе 4, администрация ruversity.com оставляет за собой право изъять спорные Обучающие материлы из публичного доступа.
             </p>
             <p>
                 In case Ruversity.com finds out that some educational content, review, question, answer or image is
